Finished entire thesis, with multiple rounds of editing by myself and thesis advisors (Drs. McClelland and Rice)

--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -1,76 +1,226 @@
+ %@string{Knuth="Donald E. Knuth"}
+
+@book{Second,
+    author = "William Mendenhall and Terry Sincich",
+    title = "A Second Course in Statistics: Regression Analysis",
+    publisher = "Prentice Hall",
+    year = 2011}
  
-Bibtex (bib) file for the thesis style document.
- 
-@string{Knuth="Donald E. Knuth"}
- 
-@book{book,
-   author = knuth,
-   title = "The {\TeX} book",
-   publisher = "Addison-Wesley",
-   year = 1984}
- 
-@book{Tbook,
-   author = knuth,
-   title = "{\TeX}: The Program",
-   publisher = "Addison-Wesley",
-   year = 1986}
- 
-@book{Metafont,
-   author = knuth,
-   title = "The Metafont book",
-   publisher = "Addison-Wesley",
-   year = 1986}
- 
-@book{CMT,
-   author = knuth,
-   title = "Computer Modern Typefaces",
-   publisher = "Addison-Wesley",
-   year = 1986}
- 
-@book{Lbook,
-   author = "Leslie Lamport",
-   title = "{\LaTeX}: A Document Preparation System",
-   edition = "2nd",
-   publisher = "Addison-Wesley",
-   year = 1994}
- 
-@book{companion,
-   author = "M{ichel} Goossens and F{rank} Mittelbach and A{lexander} Samarin",
-   title = "The {\LaTeX} Companion",
-   publisher = "Addison-Wesley",
-   year = 1994}
- 
-@article{TUG:h-l,
-  author = "Editor",
-  title = "Hyphenation Exception Log",
-  journal = "TUGboat",
-  volume = 7,
+
+@article{VM2003,
+  author = "Vito M. R. Muggeo",
+  title = "Estimating Regression Models with Unknown Break-Points",
+  journal = "Statistics in Medicine",
+  volume = 22,
+  number = 19,
+  year = 2003,
+  pages = "3055-3071"}
+  
+@article{VM2014,
+    author = "Vito M. R. Muggeo and David C. Atkins and Robert J. Gallop and Sona Dimidjian",
+    title = "Segmented Mixed Models with Random Changepoints: A Maximum Likelihood Approach with Application to Treatment for Depression Study",
+    journal = "Statistical Modelling",
+    volume = 14,
+    number = 4,
+    year = 2014,
+    pages = "293-313"
+}
+
+@article{VM2017,
+  title = {Interval estimation for the breakpoint in segmented regression: a smoothed score-based approach},
+  author = {Vito M. R. Muggeo},
+  journal = {Australian \& New Zealand Journal of Statistics},
+  year = {2017},
+  volume = {59},
+  pages = {311-322},
+}
+
+@article{PF1975b,
+    author = "Paul I. Feder",
+    title = "On Asymptotic Distribution Theory in Segmented Regression Problems - Identified Case",
+    journal = "Annals of Statistics",
+    volume = 3,
+    number = 1,
+    year = 1975,
+    pages = "49-83"}
+
+@article{PF1975a,
+    author = "Paul I. Feder",
+    title = "The Log Likelihood Ratio in Segmented Regression",
+    journal = "Annals of Statistics",
+    volume = 3,
+    number = 1,
+    year = 1975,
+    pages = "84-97"}
+    
+@article{DH1966,
+  author = "Derek J. Hudson",
+  title = "Fitting Segmented Curves Whose Join Points Have to Be Estimated",
+  journal = "Journal of the American Statistical Association",
+  volume = 61,
+  number = 316,
+  year = 1966,
+  pages = "1097-1129"}
+  
+@article{DH1969,
+  author = "D. V. Hinkley",
+  title = "Inference about the Intersection in Two-Phase Regression",
+  journal = "Biometrika",
+  volume = 56,
   number = 3,
-  year = 1986,
-  pages = "145"}
- 
- 
-@book{Hamlet,
-   author = "William Shakespeare",
-   title = "Hamlet",
-   publisher = "F.S.~Crofts~\&~Co., Inc.",
-   address = "NY",
-   year = 1946,
-   note = "Act~I, Scene~3, Lines~70-72, are apropos."}
- 
-Following author fields is not standard
-@book{JTeX,
-   author = "{Spivak, M.D., Ph.D.}",
-   title = "The Joy of {\TeX}",
-   publisher = "American Mathematical Society",
-   address = "RI",
-   year = 1986}
- 
-@book{PCTeX,
-   author = "{Spivak, M.D., Ph.D.}",
-   title = "PC{\TeX}\ Manual",
-   publisher = "Personal {\TeX}, Inc.",
-   address = "CA",
-   year = 1985}
- 
- 
+  year = 1969,
+  pages = "495-504"}
+  
+@article{PL1980,
+  author = "P. M. Lerman",
+  title = "Fitting Segmented Regression Models by Grid Search",
+  journal = "Journal of the Royal Statistical Society: Series C (Applied Statistics)",
+  volume = 29,
+  number = 1,
+  year = 1980,
+  pages = "77-84"}
+  
+@misc{WHO,
+  author = {{World Health Organization}},
+  title = {{Cardiovascular diseases (CVDs)}},
+  howpublished = {\url{https://www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)}},
+  note = {Accessed: 2020-06-01}
+}
+
+@misc{LVH,
+  author = {{Mayo Clinic}},
+  title = {Left Ventricular Hypertrophy},
+  howpublished = {\url{https://www.mayoclinic.org/diseases-conditions/left-ventricular-hypertrophy/symptoms-causes/syc-20374314}},
+  note = {Accessed: 2020-06-05}
+}
+https://www.mayoclinic.org/diseases-conditions/left-ventricular-hypertrophy/symptoms-causes/syc-20374314
+  
+@article{JD2014,
+  author = "James E. Dalen and Joseph S. Alpert and Robert J. Goldberg and Ronald S. Weinstein",
+  title = "The Epidemic of the 20th Century: Coronary Heart Disease",
+  journal = "The American Journal of Medicine",
+  volume = 127,
+  number = 9,
+  year = 2014,
+  pages = "807-812"}
+
+@article{SW2001,
+  author = "Simon N. Wood",
+  title = "Minimizing Model Fitting Objectives That Contain Spurious Local Minima by Bootstrap Restarting",
+  journal = "Biometrics",
+  volume = 57,
+  number = 1,
+  year = 2001,
+  pages = "240-244"}
+  
+@article{BT1962,
+  author = "George E. P. Box and Paul W. Tidwell",
+  title = "Transformation of the Independent Variables",
+  journal = "Technometrics",
+  volume = 4,
+  number = 4,
+  year = 1962,
+  pages = "531-550"}
+  
+@article{ASCVD,
+  author = "David C. Goff Jr. and Donald M. Lloyd-Jones and Glen Bennett and Sean Coady and Ralph B. D’Agostino and Raymond Gibbons and Philip Greenland and Daniel T. Lackland and Daniel Levy and Christopher J. O’Donnell and Jennifer G. Robinson and J. Sanford Schwartz and Susan T. Shero and Sidney C. Smith Jr. and Paul Sorlie and Neil J. Stone and Peter W. F. Wilson",
+  title = "2013 {ACC/AHA} Guideline on the Assessment of Cardiovascular Risk: A Report of the {American College of Cardiology/American Heart Association} Task Force on Practice Guidelines",
+  journal = "Circulation",
+  volume = 129,
+  number = 25,
+  year = 2013,
+  pages = "S49-S73"}
+  
+@article{GdS1995,
+  author = "Giovanni de Simone and Richard B. Devereux and Stephen R. Daniels and Richard A. Meyer",
+  title = "Gender Differences in Left Ventricular Growth",
+  journal = "Hypertension",
+  volume = 26,
+  number = 6,
+  year = 1995,
+  pages = "979-983"}
+
+@article{CS2002,
+author = "Carol J. Salton and Michael L. Chuang and Christopher J. O'Donnell and Michelle J. Kupka and Martin G. Larson and Kraig V. Kissinger and Robert R. Edelman and Daniel Levy and Warren J. Manning",
+  title = "Gender differences and normal left ventricular anatomy in an adult population free of hypertension: A cardiovascular magnetic resonance study of the {Framingham Heart Study Offspring} cohort",
+  journal = "Journal of the American College of Cardiology",
+  volume = 39,
+  number = 6,
+  year = 2002,
+  pages = "1055-1060"}
+  
+@article{MESA,
+author = "Diane E. Bild and David A. Bluemke and Gregory L. Burke and Robert Detrano and Ana V. Diez Roux and Aaron R. Folsom and Philip Greenland and David R. Jacobs, Jr. and Richard Kronmal and Kiang Liu and Jennifer C. Nelson and Daniel O’Leary and Mohammed F. Saad and Steven Shea and Moyses Szklo and Russell P. Tracy",
+  title = "{Multi-Ethnic Study of Atherosclerosis}: objectives and design",
+  journal = "American Journal of Epidemiology",
+  volume = 156,
+  number = 9,
+  year = 2002,
+  pages = "871-881"}
+  
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2019},
+    url = {https://www.R-project.org/},
+  }
+
+@article{PV2006,
+author = "Paolo Verdecchia and Fabio Angeli and Roberto Gattobigio and Mariagrazia Sardone and Sergio Pede and Gian Paolo Reboldi",
+  title = "Regression of Left Ventricular Hypertrophy and Prevention of Stroke in Hypertensive Subjects",
+  journal = "American Journal of Epidemiology",
+  volume = 19,
+  number = 5,
+  year = 2006,
+  pages = "493-499"}
+
+@article{AG2006,
+author = "Alan H. Gradman and Fadi Alfayoumi",
+  title = "From Left Ventricular Hypertrophy to Congestive Heart Failure: Management of Hypertensive Heart Disease",
+  journal = "Progress in Cardiovascular Diseases",
+  volume = 48,
+  number = 5,
+  year = 2006,
+  pages = "326-341"}
+  
+@article{ARICNCS,
+author = "Faye L. Norby and Lin Y. Chen and Elsayed Z. Soliman and Rebecca F. Gottesman and Thomas H. Mosley and Alvaro Alonso",
+  title = "Association of left ventricular hypertrophy with cognitive decline and dementia risk over 20 years: {The Atherosclerosis Risk In Communities–Neurocognitive Study (ARIC-NCS)}",
+  journal = "Progress in Cardiovascular Diseases",
+  volume = 204,
+  year = 2018,
+  pages = "58-67"}
+  
+@unpublished{CMRI,
+author = "Karen G. Grajewski and Jadranka Stojanovska and El-Sayed H. Ibrahim and Mohamed Sayyouh and Anil Attili",
+title = "Left Ventricular Hypertrophy: Evaluation With Cardiac {MRI}",
+note = "Submitted to \textit{Current Problems in Diagnostic Radiology}, preprint available online 2019-09-14"}
+
+@article{AA2012,
+author = "Anderson C. Armstrong and Samuel Gidding and Ola Gjesdal and  Colin Wu and David A. Bluemke and João A. C. Lima",
+  title = "{LV} Mass Assessed by Echocardiography and {CMR}, Cardiovascular Outcomes, and Medical Practice",
+  journal = "JACC: Cardiovascular Imaging",
+  volume = 5,
+  number = 8,
+  year = 2012,
+  pages = "837-848"}
+  
+@article{LB2010,
+author = "Lyndia C. Brumback and Richard Kronmal and Susan R. Heckbert and Hanyu Ni and W. Gregory Hundley and João A. C. Lima and David A. Bluemke",
+  title = "Body size adjustments for left ventricular mass by cardiovascular magnetic resonance and their impact on left ventricular hypertrophy classification",
+  journal = "The International Journal of Cardiovascular Imaging",
+  volume = 26,
+  number = 4,
+  year = 2010,
+  pages = "459-468"}
+
+@article{DM2019,
+author = "Daniele Massera and Robyn L. McClelland and Bharath Ambale‐Venkatesh and Antoinette S. Gomes and W. Gregory Hundley and Nadine Kawel‐Boehm and Kihei Yoneyama and David S. Owens and Mario J. Garcia and Mark V. Sherrid and Jorge R. Kizer and João A. C. Lima and David A. Bluemke",
+  title = "Prevalence of Unexplained Left Ventricular Hypertrophy by Cardiac Magnetic Resonance Imaging in {MESA}",
+  journal = "Journal of the American Heart Association",
+  volume = 8,
+  number = 8,
+  year = 2019}  
+
