--- a/uwthesis.cls
+++ b/uwthesis.cls
@@ -626,18 +626,18 @@
 \def\Title#1{\gdef\@Title{#1}}
 \def\Author#1{\gdef\@Author{#1}}
 \def\Year#1{\gdef\@Year{#1}}  \Year{\year}
-\def\Degree#1{\gdef\@Degree{#1}} \Degree{Doctor of Philosophy}
+\def\Degree#1{\gdef\@Degree{#1}} \Degree{Master of Science}
 \def\Program#1{\gdef\@Program{#1}} \Program{your program here}
 %
 \def\School#1{\gdef\@School{#1}} \School{University of Washington}
 \def\GSchool#1{\gdef\@GSchool{#1}} \GSchool{Graduate School}
 \def\Degreetext#1{\gdef\@Degreetext{#1}} 
-  \Degreetext{A dissertation\\ submitted in partial fulfillment of the\\requirements for the degree of}
+  \Degreetext{A thesis\\ submitted in partial fulfillment of the\\requirements for the degree of}
 \def\Programtext#1{\gdef\@Programtext{#1}}  
        \Programtext{Program Authorized to Offer Degree: }
 
 \def\textofCommittee#1{\gdef\@textofCommittee{#1}}  
-       \textofCommittee{Reading Committee: }
+       \textofCommittee{Committee: }
 \def\textofDate#1{\gdef\@textofDate{#1}}  \textofDate{Date}
 
 \def\textofChair#1{\gdef\@textofChair{#1}}
@@ -694,7 +694,7 @@
       \count1=0
       \@whilenum \count1<\@Chair \do
        {\vskip12\p@ \baselineskip12pt
-        \csname C:\the\count1\endcsname, Chair
+        \csname C:\the\count1\endcsname
         \advance\count1 by1}
       \count1=0
       \@whilenum \count1<\@Sign \do
